[gd_scene load_steps=3 format=3 uid="uid://bs0hr050htym8"]

[ext_resource type="Texture2D" uid="uid://dgwxht26s1xxy" path="res://sprites/sBookmark.png" id="1_1lrwv"]
[ext_resource type="Script" path="res://scripts/Workspace/bookmark.gd" id="2_cypt3"]

[node name="Bookmark" type="TextureRect"]
top_level = true
offset_left = -16.0
offset_top = -9.0
offset_right = 16.0
offset_bottom = 23.0
tooltip_text = "Bookmark"
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource("1_1lrwv")
script = ExtResource("2_cypt3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 12.0
offset_right = 109.0
offset_bottom = 35.0

[node name="BookmarkNameLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "Bookmark"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
